NetworkStack.yaml
Parameters:
  VpcCIDR:
    Description: please enter the IP range for this VPC
    Type: String

  EnvironmentName:
    Description: An environment name that will be prefixed to resource names
    Type: String

  PublicSubnet1CIDR:
    Description: please enter the IP range for this PublicSubnet in the first AZ
    Type: String

  PublicSubnet2CIDR:
    Description: please enter the IP range for this PublicSubnet in the second AZ
    Type: String
  PrivateSubnet1CIDR:
    Description: Please enter the IP range (CIDR notation) for the private subnet in the first Availability Zone
    Type: String
    Default: 10.0.2.0/24

  PrivateSubnet2CIDR:
    Description: Please enter the IP range (CIDR notation) for the private subnet in the second Availability Zone
    Type: String
    Default: 10.0.3.0/24


Resources:
  yoyoVpc:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: !Ref VpcCIDR
      EnableDnsHostnames: true
      
  yoyoInternetGatway:
    Type: AWS::EC2::InternetGateway
      
  yoyoVpcInternetGatwayAttachment:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      InternetGatewayId: !Ref yoyoInternetGatway
      VpcId: !Ref yoyoVpc

  yoyoPublicSubnet1: 
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref yoyoVpc
      AvailabilityZone: !Select [ 0, !GetAZs '' ]
      CidrBlock: !Ref PublicSubnet1CIDR
      MapPublicIpOnLaunch: true
    
  yoyoPublicSubnet2: 
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref yoyoVpc
      AvailabilityZone: !Select [ 1, !GetAZs '' ]
      CidrBlock: !Ref PublicSubnet2CIDR
      MapPublicIpOnLaunch: true
  yoyoPrivateSubnet1: 
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref yoyoVpc
      AvailabilityZone: !Select [ 0, !GetAZs '' ]
      CidrBlock: !Ref PrivateSubnet1CIDR
      MapPublicIpOnLaunch: false
      
  yoyoPrivateSubnet2: 
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref yoyoVpc
      AvailabilityZone: !Select [ 1, !GetAZs '' ]
      CidrBlock: !Ref PrivateSubnet2CIDR
      MapPublicIpOnLaunch: false
      
  NatGateway1EIP:
    Type: AWS::EC2::EIP
    DependsOn: yoyoVpcInternetGatwayAttachment
    Properties:
      Domain: vpc

  NatGateway2EIP:
    Type: AWS::EC2::EIP
    DependsOn: yoyoVpcInternetGatwayAttachment
    Properties:
      Domain: vpc

  NatGateway1: 
    Type: AWS::EC2::NatGateway
    Properties:
      AllocationId: !GetAtt NatGateway1EIP.AllocationId
      SubnetId: !Ref yoyoPublicSubnet1

  NatGateway2: 
    Type: AWS::EC2::NatGateway
    Properties:
      AllocationId: !GetAtt NatGateway2EIP.AllocationId
      SubnetId: !Ref yoyoPublicSubnet2
  yoyoPublicRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref yoyoVpc
      
  DefaultPublicRoute:
    Type: AWS::EC2::Route
    DependsOn: yoyoVpcInternetGatwayAttachment
    Properties:
      RouteTableId: !Ref yoyoPublicRouteTable
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref yoyoInternetGatway
  PublicSubnet1RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref yoyoPublicRouteTable
      SubnetId: !Ref yoyoPublicSubnet1

  PublicSubnet2RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref yoyoPublicRouteTable
      SubnetId: !Ref yoyoPublicSubnet2

  PrivateRouteTable1:
    Type: AWS::EC2::RouteTable
    Properties: 
      VpcId: !Ref yoyoVpc

  DefaultPrivateRoute1:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref PrivateRouteTable1
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId: !Ref NatGateway1

  PrivateSubnet1RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref PrivateRouteTable1
      SubnetId: !Ref yoyoPrivateSubnet1

  PrivateRouteTable2:
    Type: AWS::EC2::RouteTable
    Properties: 
      VpcId: !Ref yoyoVpc

  DefaultPrivateRoute2:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref PrivateRouteTable2
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId: !Ref NatGateway2

  PrivateSubnet2RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref PrivateRouteTable2
      SubnetId: !Ref yoyoPrivateSubnet2

Outputs: 

  yoyoVpc:
    Description: A reference to the created VPC
    Value: !Ref yoyoVpc
    Export:
      Name: !Sub ${EnvironmentName}-VPCID

  yoyoPublicRouteTable:
    Description: Public Routing
    Value: !Ref yoyoPublicRouteTable
    Export:
      Name: !Sub ${EnvironmentName}-PUB-RT
  VPCPrivateRouteTable1:
    Description: Private Routing AZ1
    Value: !Ref PrivateRouteTable1
    Export:
      Name: !Sub ${EnvironmentName}-PRI1-RT

  VPCPrivateRouteTable2:
    Description: Private Routing AZ2
    Value: !Ref PrivateRouteTable2
    Export:
      Name: !Sub ${EnvironmentName}-PRI2-RT

  PublicSubnets:
    Description: A list of the public subnets
    Value: !Join [ ",", [ !Ref yoyoPublicSubnet1, !Ref yoyoPublicSubnet2 ]]
    Export:
      Name: !Sub ${EnvironmentName}-PUB-NETS

  PrivateSubnets:
    Description: A list of the private subnets
    Value: !Join [ ",", [ !Ref yoyoPrivateSubnet1, !Ref yoyoPrivateSubnet2 ]]
    Export:
      Name: !Sub ${EnvironmentName}-PRIV-NETS

  yoyoPublicSubnet1:
    Description: A reference to the public subnet in the 1st Availability Zone
    Value: !Ref yoyoPublicSubnet1
    Export:
      Name: !Sub ${EnvironmentName}-PUB1-SN

  yoyoPublicSubnet2: 
    Description: A reference to the public subnet in the 2nd Availability Zone
    Value: !Ref yoyoPublicSubnet2
    Export:
      Name: !Sub ${EnvironmentName}-PUB2-SN

  PrivateSubnet1:
    Description: A reference to the private subnet in the 1st Availability Zone
    Value: !Ref yoyoPrivateSubnet1
    Export:
      Name: !Sub ${EnvironmentName}-PRI1-SN

  PrivateSubnet2: 
    Description: A reference to the private subnet in the 2nd Availability Zone
    Value: !Ref yoyoPrivateSubnet2
    Export:
      Name: !Sub ${EnvironmentName}-PRI2-SN
